--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "css-loader": "^0.23.1",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "style-loader": "^0.13.1"
   }
 }
