--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^0.23.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-router": "^2.5.2",
     "style-loader": "^0.13.1"
   }
 }
