--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "boron": "^0.2.3",
     "css-loader": "^0.23.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
